jersey异常同意处理，swaggerui增加联系人

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,12 @@ swagger2:
   contactEmail: sxjjio@163.com
   version: 1.0
   apiBasePackage: com.xj.plugins.controller
+
 spring:
   jersey:
     application-path: /api
 
+jersey:
+  swagger:
+    enable: true
 
