--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,74 @@
 
 
     <build>
+        <!--<resources>-->
+        <!--<resource>-->
+        <!--<directory>${basedir}/src/main/resources/webapp</directory>-->
+        <!--&lt;!&ndash;注意此次必须要放在此目录下才能被访问到&ndash;&gt;-->
+        <!--<targetPath>META-INF/resources</targetPath>-->
+        <!--<includes>-->
+        <!--<include>**/**</include>-->
+        <!--</includes>-->
+        <!--</resource>-->
+        <!--<resource>-->
+        <!--<directory>${basedir}/src/main/resources</directory>-->
+        <!--<excludes>-->
+        <!--<exclude>webapp/**</exclude>-->
+        <!--</excludes>-->
+        <!--</resource>-->
+        <!--</resources>-->
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <finalName>jersey-swagger</finalName>
+                    <layout>ZIP</layout>
+                    <mainClass>com.xj.plugins.Springboot2AnalyzeApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <finalName>SpringBoot-plugins</finalName>
+                    <outputDirectory>${basedir}/target</outputDirectory>
+                    <descriptors>
+                        <descriptor>${basedir}/assembly.xml</descriptor>
+                    </descriptors>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <excludes>
+                        <exclude>*.yml</exclude>
+                        <exclude>bin/**</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
