--- a/db-manager/src/main/resources/application.properties
+++ b/db-manager/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#程序初始化时自动migrate控制
+#程序初始化时自动migrate控制，false表示项目启动不会执行默认的migrate动作
 flyway.init.autoMigrate=false
-spring.profiles.active=${DB_ENV}
+spring.profiles.active=${DB_ENV} 
 spring.flyway.baseline-version=1.1
 spring.flyway.baseline-on-migrate=true
 spring.flyway.table=SCHEMA_VERSION
